Add load choices function

--- a/storyboard.html
+++ b/storyboard.html
@@ -17,9 +17,9 @@
 
       <!--section for choices-->
       <div id="choices">
-        <button>choice 1</button>
-        <button>choice 2</button>
-        <button>choice 3</button>
+        <button class="choice" value="0">choice 1</button>
+        <button class="choice" value="1">choice 2</button>
+        <button class="choice" value="2">choice 3</button>
       </div>
 
       <div id="epilogue">
