--- a/storyboard.html
+++ b/storyboard.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/storyboardstyle.css">
   </head>
   <body>
     <section>
-      <div id="storyboard">
+      <div id="storyboard" class="dialogue">
         <!--dialogue loaded here-->
       </div>
 
