Create functionality to display cards for storys

--- a/storySelection.html
+++ b/storySelection.html
@@ -2,25 +2,87 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="assets/css/storySelectionStyle.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/storySelectionStyle.css">
 </head>
 
 <body>
-  <div id="story-section-wrapper">
-    <div id="card-wrapper">
-      <div id="img-wrapper">
-        <img class="card-image" src="https://answers.flexsim.com/themes/base/admin/img/default-coverImage.png" alt="">
-      </div>
-      <div id="content-wrapper">
-        <h2>Lorem, ipsum.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis omnis fugiat adipisci ducimus? Facere optio beatae autem numquam maxime debitis provident sint earum animi nostrum. Sit nostrum eum ut? In?</p>
-      </div>
+    <div id="story-section-wrapper" role="main">
+        <div id="card-wrapper" role="list">
+        </div>
     </div>
-    </div>
-  </div>
 </body>
+
 </html>
-<script></script>
+<script>
+    const storyFiles = ['desert-island', 'desert-island', 'desert-island', 'desert-island', 'desert-island', 'desert-island'];
+    const cardWrapper = document.getElementById('card-wrapper');
+
+    // Fetch JSON data for the specified stories
+    const fetchStoryData = async (story) => {
+        try {
+            const response = await fetch(`assets/js/stories/${story}.json`);
+            if (response.ok) {
+                return await response.json();
+            } else {
+                console.error('Failed to fetch JSON file:', response.status, response.statusText);
+                return null;
+            }
+        } catch (error) {
+            console.error('An error occurred:', error);
+            return null;
+        }
+    };
+
+    // Create a card element with provided details
+    const createCardElement = (details) => {
+        const card = document.createElement('article');
+        card.className = 'card';
+
+        const cardImage = document.createElement('img');
+        cardImage.className = 'card-image';
+        cardImage.src = details.image;
+        cardImage.alt = details.alt;
+
+        const cardTitle = document.createElement('h2');
+        cardTitle.textContent = details.name;
+        cardTitle.tabIndex = 0;
+
+        const cardDescription = document.createElement('p');
+        cardDescription.textContent = details.about;
+        cardDescription.tabIndex = 0;
+
+        card.appendChild(cardImage);
+        card.appendChild(cardTitle);
+        card.appendChild(cardDescription);
+
+        // Add ARIA attributes for better accessibility
+        card.setAttribute('role', 'card');
+        cardTitle.setAttribute('role', 'heading');
+        cardTitle.setAttribute('aria-level', '2');
+
+        return card;
+    };
+
+    // Append a card element to the card wrapper
+    const appendCardToWrapper = (card) => {
+        cardWrapper.appendChild(card);
+    };
+
+    // Process story data and create cards
+    const processStoryData = async (storyFiles) => {
+        for (const story of storyFiles) {
+            const storyData = await fetchStoryData(story);
+            if (storyData) {
+                const card = createCardElement(storyData.details);
+                appendCardToWrapper(card);
+            }
+        }
+    };
+
+    // Call the function to start fetching and creating cards
+    processStoryData(storyFiles);
+
+</script>
