--- a/storySelection.html
+++ b/storySelection.html
@@ -13,5 +13,6 @@
         <div id="card-wrapper">
         </div>
     </div>
+    <script src="./assets/js/story-selection.js"></script>
 </body>
 </html>
