Add creepster font & create root variable

--- a/storySelection.html
+++ b/storySelection.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/storySelectionStyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <h1 id="story-selection-heading">Select Your Story!</h1>
     <div id="story-section-wrapper">
         <div id="card-wrapper">
         </div>
