add styling for the storyboard page including media queries

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       
             <!--section for choices-->
             <div id="choices">
-              <button class="choice" value="0">choice 1</button>
-              <button class="choice" value="1">choice 2</button>
+              <button class="choice" value="0">choice 1</button>&nbsp;&nbsp;&nbsp;
+              <button class="choice" value="1">choice 2</button>&nbsp;&nbsp;&nbsp;
               <button class="choice" value="2">choice 3</button>
             </div>
       
