--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
       <!-- Story Board -->
       <section id="storyboard-section" class="hidden">
+        <img id="scene-image" src="" alt="Scene Image" style="max-width: 100%; height: auto;"> 
         <div id="storyboard" class="dialogue">
           <!--dialogue loaded here-->
         </div>
