--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
           </p>
         </div>
 
+        <div id="character-name-section">
+          <label for="character-name-input">Enter character name:</label>
+          <input type="text" id="character-name-input">
+          <button id="set-character-name-btn">Set Character Name</button>
+        </div>
+
         <!-- Buttons -->
         <div id="buttons">
           <button id="rules-btn">Rules</button>
