added HTML, JavaScript and CSS for the modal box for rules

--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
           <button id="rules-btn">Rules</button>
           <button id="start-btn">Start</button>
         </div>
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+          <!-- Modal content -->
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h1>How to play</h1>
+            <ol>
+              <li>Enter your username (not all stories have usernames)</li>
+              <li>Click the start button</li>
+              <li>Choose your story</li>
+              <li>Read your dialogue and make a choice</li>
+              <li>
+                Read your choice, the result of your choice, a new scene will
+                then load
+              </li>
+              <li>keep making choices till the end screen</li>
+              <li>
+                Anytime you want to end the story click the home button at the
+                top of the screen, this will take you back to the start screen
+              </li>
+            </ol>
+          </div>
+        </div>
       </section>
 
       <!-- Story Selection -->
