--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
         </div>
 
       </section>
+
+      <!-- end page -->
+      <section id="end-page-section">
+        <div>
+          <p class="hidden">Thank you for taking the time to try out our creation, we hope you have enjoyed the experience and pass the link onto your friends and family. We hope you will come back and try out another of our stories. Have a spooktacular day.</p>
+        </div>
+        <div class="btn-container">
+          <a class="home-btn" href="/index.html">Return home</a>
+          
+            
+        </div>
+      </section>
     </main>
     <script src="assets/js/script.js"></script>
   </body>
