--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <div id="character-name-section">
           <label for="character-name-input">Enter character name:</label>
           <input type="text" id="character-name-input">
-          <button id="set-character-name-btn">Set Character Name</button>
+          <button class="btn" id="set-character-name-btn">Set Character Name</button>
         </div>
 
         <!-- Buttons -->
         <div id="buttons">
-          <button id="rules-btn">Rules</button>
-          <button id="start-btn">Start</button>
+          <button class="btn" id="rules-btn">Rules</button>
+          <button class="btn" id="start-btn">Start</button>
         </div>
 
         <!-- The Modal -->
@@ -110,9 +110,7 @@
           <p class="hidden">Thank you for taking the time to try out our creation, we hope you have enjoyed the experience and pass the link onto your friends and family. We hope you will come back and try out another of our stories. Have a spooktacular day.</p>
         </div>
         <div class="btn-container">
-          <a class="home-btn" href="/index.html">Return home</a>
-          
-            
+          <a class="home-btn hidden" href="/index.html">Return home</a>                      
         </div>
       </section>
     </main>
