add header and app logo and favicon

--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="assets/icons/icons8-halloween-64.png">
   </head>
   <body>
+    <header>
+      <div class="logo">
+        <a href="/index.html">
+          <img src="assets/icons/icons8-halloween-64.png" alt="App Logo" />
+        </a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="#" id="nav-rules-btn">Rules</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <!-- Start Section -->
       <section id="start-section">
