adding footer and fixing contrast

--- a/index.html
+++ b/index.html
@@ -130,4 +130,12 @@
     </main>
     <script src="assets/js/script.js"></script>
   </body>
+  <footer>
+    <div class="footer-container">
+        <a href="https://github.com/Dee-McG/Hackathon-Project" target="_blank" class="github-icon">
+            <img src="assets/icons/icons8-github-250.png" alt="GitHub" />
+        </a>
+        <p class="copyright-text">&copy; 2023 Your Company or Name</p>
+    </div>
+</footer>
 </html>
