--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <body>
     <header>
       <div class="logo">
-        <a href="/index.html">
+        <a href="index.html">
           <img src="assets/icons/icons8-halloween-64.png" alt="App Logo" />
         </a>
       </div>
       <nav>
         <ul>
-          <li><a href="/index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#" id="nav-rules-btn">Rules</a></li>
         </ul>
       </nav>
@@ -124,7 +124,7 @@
           <p class="hidden">Thank you for taking the time to try out our creation, we hope you have enjoyed the experience and pass the link onto your friends and family. We hope you will come back and try out another of our stories. Have a spooktacular day.</p>
         </div>
         <div class="btn-container">
-          <a class="home-btn hidden" href="/index.html">Return home</a>                      
+          <a class="home-btn hidden" href="index.html">Return home</a>                      
         </div>
       </section>
     </main>
