adding the span

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <label for="character-name-input">Enter character name:</label>
           <input type="text" id="character-name-input">
           <button class="btn" id="set-character-name-btn">Set Character Name</button>
+          <span id="confirmation-message" style="display: none;">Username is set!</span>
         </div>
 
         <!-- Buttons -->
