Add name message text

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           <label for="character-name-input">Enter character name:</label>
           <input type="text" id="character-name-input">
           <button class="btn" id="set-character-name-btn">Set Character Name</button>
+          <div>
+            <i class="hidden name-added-message">Name Added!</i>
+          </div>
         </div>
 
         <!-- Buttons -->
