Add image load per scence

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#" id="nav-rules-btn">Rules</a></li>
+          <li><a id="nav-rules-btn">Rules</a></li>
         </ul>
       </nav>
     </header>
